package mei.designpattern.creational.decorator.structure;

public abstract class Component {
    public abstract void operation();
}
