package mei.designpattern.creational.decorator.structure;

public class ConcreteComponent extends Component {
    @Override
    public void operation() {
        // some code impl
    }
}
